We's view ready

--- a/views/we.pug
+++ b/views/we.pug
@@ -3,4 +3,25 @@ extends ./layout/index
 block content 
     main.container.mt-5 
         .row
-            h1= page
+            .col-md-5 
+                img(src="img/nosotros.jpg", alt="Imagen sobre nosotros", class="img-fluid")
+            .col-md-7
+                h1= page
+                blockquote Praesent aliquet elementum magna, nec dapibus diam euismod nec. Etiam gravida metus sit amet justo viverra, eu tempus ipsum ultrices. Phasellus risus risus, pretium in rutrum nec, aliquam a ex. Aliquam interdum ornare diam, ac sollicitudin tortor imperdiet nec.
+                p Vivamus at tincidunt eros. Duis id magna id risus vestibulum pulvinar non in sem. Duis ac libero hendrerit, pretium dolor a, sagittis urna. Cras quis vehicula ipsum, vel lacinia augue. Praesent pretium arcu nibh, vel tempus lectus dapibus at. Fusce mollis magna sit amet scelerisque venenatis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec nec ultrices urna, a commodo urna. Quisque nec nulla vel sem porta varius sit amet ac tortor. Donec leo orci, eleifend sit amet iaculis suscipit, lobortis vel lacus. Sed at varius risus.
+                p Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus commodo pulvinar gravida. Proin tincidunt dui et massa euismod, vel aliquet sapien molestie. Cras tincidunt, lorem ac luctus sodales, nulla arcu pulvinar augue, eget pharetra nulla tortor non enim. Suspendisse nec nibh non purus suscipit gravida ac et metus. Proin tincidunt sem eget lorem dictum vestibulum et sit amet dui. Suspendisse rhoncus blandit quam, a commodo arcu tristique sed. Nulla sit amet quam faucibus nibh facilisis semper vitae sit amet leo.
+    .icon-list
+        .container.mt-5.py-5.text-center
+            .row    
+                .col-md-4
+                    img(src="img/icono_seguridad.svg", alt="icono seguridad" class="img-fluid mb-4")
+                    h2.mb-4 Seguridad
+                    p Praesent aliquet elementum magna, nec dapibus diam euismod nec. Etiam gravida metus sit amet justo viverra, eu tempus ipsum ultrices. 
+                .col-md-4
+                    img(src="img/icono_destinos.svg", alt="icono destinos" class="img-fluid mb-4")
+                    h2.mb-4 Seguridad
+                    p Praesent aliquet elementum magna, nec dapibus diam euismod nec. Etiam gravida metus sit amet justo viverra, eu tempus ipsum ultrices. 
+                .col-md-4
+                    img(src="img/icono_precios.svg", alt="icono precios" class="img-fluid mb-4")
+                    h2.mb-4 Seguridad
+                    p Praesent aliquet elementum magna, nec dapibus diam euismod nec. Etiam gravida metus sit amet justo viverra, eu tempus ipsum ultrices. 
