--- a/views/testimonials.pug
+++ b/views/testimonials.pug
@@ -2,5 +2,23 @@ extends ./layout/index
 
 block content 
     main.container.mt-5 
-        .row
-            h1= page
+        h1.text-center.mt-5 #{ page }
+        .row 
+            .col-md-12
+                h2.d-block.w-100.text-center Agrega un testimonial
+                if(errors)
+                    each error in errors 
+                        .alert.col.alert-danger.text-center=error.message
+            .row.justify-content-center.col
+                .col-md-8   
+                  form(action="/testimonials" method="POST")  
+                    .form-group 
+                        label(for="name") Nombre
+                        input#name(type="text", placeholder="Nombre", name="name", class="form-control", value=name)
+                    .form-group 
+                        label(for="email") Correo Electrónico
+                        input#email(type="text", placeholder="Correo electrónico", name="email", class="form-control", value=email)
+                    .form-group 
+                        label(for="message") Mensaje
+                        textarea#message(class="form-control", name="message", placeholder="Mensaje", rows=3)= message 
+                    input.btn.btn-success.btn-block(type="submit")
