Now all is in english

--- a/views/travel.pug
+++ b/views/travel.pug
@@ -4,7 +4,7 @@ block content
     main.container.mt-5 
         .row
             .col-md-5 
-                img(src=`/img/destinos_${ travel.image }_ln.jpg`, alt="trip image", class="img-fluid")
+                img(src=`/img/destinations_${ travel.image }_ln.jpg`, alt="trip image", class="img-fluid")
             .col-md-7
                 h1 #{ travel.title }
                 p
@@ -22,7 +22,7 @@ block content
                         circle(cx='12' cy='12' r='9')
                         path(d='M14.8 9a2 2 0 0 0 -1.8 -1h-2a2 2 0 0 0 0 4h2a2 2 0 0 1 0 4h-2a2 2 0 0 1 -1.8 -1')
                         path(d='M12 6v2m0 8v2')
-                    | #{ travel.price } Dolares
+                    | #{ travel.price } Dollars
                 p 
                     svg.icon.icon-tabler.icon-tabler-users(xmlns='http://www.w3.org/2000/svg' width='44' height='44' viewbox='0 0 24 24' stroke-width='1.5' stroke='#dc135f' fill='none' stroke-linecap='round' stroke-linejoin='round')
                         path(stroke='none' d='M0 0h24v24H0z' fill='none')
@@ -30,5 +30,5 @@ block content
                         path(d='M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2')
                         path(d='M16 3.13a4 4 0 0 1 0 7.75')
                         path(d='M21 21v-2a4 4 0 0 0 -3 -3.85')
-                    | #{ travel.available } Disponibles
+                    | #{ travel.available } Available
                 p= travel.description
