--- a/views/we.pug
+++ b/views/we.pug
@@ -4,7 +4,7 @@ block content
     main.container.mt-5 
         .row
             .col-md-5 
-                img(src="img/nosotros.jpg", alt="Imagen sobre nosotros", class="img-fluid")
+                img(src="img/we.jpg", alt="Imagen sobre nosotros", class="img-fluid")
             .col-md-7
                 h1= page
                 blockquote Praesent aliquet elementum magna, nec dapibus diam euismod nec. Etiam gravida metus sit amet justo viverra, eu tempus ipsum ultrices. Phasellus risus risus, pretium in rutrum nec, aliquam a ex. Aliquam interdum ornare diam, ac sollicitudin tortor imperdiet nec.
@@ -14,14 +14,14 @@ block content
         .container.mt-5.py-5.text-center
             .row    
                 .col-md-4
-                    img(src="img/icono_seguridad.svg", alt="icono seguridad" class="img-fluid mb-4")
-                    h2.mb-4 Seguridad
+                    img(src="img/security_icon.svg", alt="icono seguridad" class="img-fluid mb-4")
+                    h2.mb-4 Security
                     p Praesent aliquet elementum magna, nec dapibus diam euismod nec. Etiam gravida metus sit amet justo viverra, eu tempus ipsum ultrices. 
                 .col-md-4
-                    img(src="img/icono_destinos.svg", alt="icono destinos" class="img-fluid mb-4")
-                    h2.mb-4 Seguridad
+                    img(src="img/destinations_icon.svg", alt="icono destinos" class="img-fluid mb-4")
+                    h2.mb-4 Destinations
                     p Praesent aliquet elementum magna, nec dapibus diam euismod nec. Etiam gravida metus sit amet justo viverra, eu tempus ipsum ultrices. 
                 .col-md-4
-                    img(src="img/icono_precios.svg", alt="icono precios" class="img-fluid mb-4")
-                    h2.mb-4 Seguridad
+                    img(src="img/prices_icon.svg", alt="icono precios" class="img-fluid mb-4")
+                    h2.mb-4 Prices
                     p Praesent aliquet elementum magna, nec dapibus diam euismod nec. Etiam gravida metus sit amet justo viverra, eu tempus ipsum ultrices. 
