--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -7,6 +7,6 @@ header
                         img(src="/img/logo.svg", alt="logo")
                 .col-md-8
                     nav.mt-5.mt-md-0.nav.justify-content-center.justify-content-md-end 
-                        a.nav-link(href="/we") Nosotros
-                        a.nav-link(href="/travels") Viajes
-                        a.nav-link(href="/testimonials") Testimoniales
+                        a.nav-link(href="/we") We
+                        a.nav-link(href="/travels") Travels
+                        a.nav-link(href="/testimonials") Testimonials
