--- a/views/testimonials.pug
+++ b/views/testimonials.pug
@@ -5,7 +5,7 @@ block content
         h1.text-center.mt-5 #{ page }
         .row 
             .col-md-12
-                h2.d-block.w-100.text-center Agrega un testimonial
+                h2.d-block.w-100.text-center Add a testimonial
                 if(errors)
                     each error in errors 
                         .alert.col.alert-danger.text-center=error.message
@@ -13,12 +13,12 @@ block content
                 .col-md-8   
                   form(action="/testimonials" method="POST")  
                     .form-group 
-                        label(for="name") Nombre
-                        input#name(type="text", placeholder="Nombre", name="name", class="form-control", value=name)
+                        label(for="name") Name
+                        input#name(type="text", placeholder="Name", name="name", class="form-control", value=name)
                     .form-group 
-                        label(for="email") Correo Electrónico
-                        input#email(type="text", placeholder="Correo electrónico", name="email", class="form-control", value=email)
+                        label(for="email") Email
+                        input#email(type="text", placeholder="Email", name="email", class="form-control", value=email)
                     .form-group 
-                        label(for="message") Mensaje
-                        textarea#message(class="form-control", name="message", placeholder="Mensaje", rows=3)= message 
+                        label(for="message") Message
+                        textarea#message(class="form-control", name="message", placeholder="Message", rows=3)= message 
                     input.btn.btn-success.btn-block(type="submit")
