Creating the home page desing

--- a/views/home.pug
+++ b/views/home.pug
@@ -1,6 +1,16 @@
 extends ./layout/index
 
+block slider 
+    .slider 
+        h1 Rio de Janeiro 
+        em Aventure
+
 block content 
     main.container.mt-5 
-        .row
-            h1= page
+        h2.text-center.mb-5 About us
+        .row.mb-5 
+            .col-md-6
+                p Fusce ornare rhoncus volutpat. Ut hendrerit eu turpis sit amet laoreet. Vivamus a porttitor nunc. Aenean commodo tortor quis dolor tincidunt pellentesque. Nam ac nunc consequat, laoreet mi ut, ultricies ipsum. Nulla in facilisis nulla. Nam massa nulla, suscipit at purus vel, aliquam finibus quam. Morbi risus libero, aliquam nec nunc nec, lobortis lobortis neque. Nullam aliquet, urna et interdum dictum, tortor eros vehicula nisl, quis varius erat metus eget diam.
+                p Nullam finibus et leo ac ultrices. Pellentesque dignissim nunc a sem vehicula, quis tempor nisl efficitur. Curabitur sed massa vel sem pellentesque sodales. Curabitur malesuada est tempor ex aliquet feugiat. Aenean semper elit at blandit congue. Sed non ornare magna. Pellentesque ornare facilisis tellus, sit amet efficitur lacus suscipit sit amet. 
+            .col-md-6
+                img(src="/img/home_we.jpg", alt="About us", class="img-fluid")
