Showing 3 trips un home page

--- a/views/home.pug
+++ b/views/home.pug
@@ -14,3 +14,4 @@ block content
                 p Nullam finibus et leo ac ultrices. Pellentesque dignissim nunc a sem vehicula, quis tempor nisl efficitur. Curabitur sed massa vel sem pellentesque sodales. Curabitur malesuada est tempor ex aliquet feugiat. Aenean semper elit at blandit congue. Sed non ornare magna. Pellentesque ornare facilisis tellus, sit amet efficitur lacus suscipit sit amet. 
             .col-md-6
                 img(src="/img/home_we.jpg", alt="About us", class="img-fluid")
+        include ./layout/travelsBlock
