Discount part in home page created

--- a/views/home.pug
+++ b/views/home.pug
@@ -15,3 +15,12 @@ block content
             .col-md-6
                 img(src="/img/home_we.jpg", alt="About us", class="img-fluid")
         include ./layout/travelsBlock
+    .discount
+        .container 
+            .row 
+                .col-md-6 
+                    .content 
+                        h3 5% Discount
+                        p.title Canada's Travel
+                        p.date 20/03/2022 - 28/03/2022
+                        p.price $2500
