Show testimonials in home page, multiple database queries and testimonials block was created

--- a/views/home.pug
+++ b/views/home.pug
@@ -24,3 +24,7 @@ block content
                         p.title Canada's Travel
                         p.date 20/03/2022 - 28/03/2022
                         p.price $2500
+    .container 
+        h2.mt-5.text-center Testimonials
+        blockquote.text-center Read about our costumers and their experiences
+        include ./layout/testimonialsBlock
