--- a/views/testimonials.pug
+++ b/views/testimonials.pug
@@ -4,16 +4,7 @@ block content
     main.container.mt-5 
         h1.text-center.mt-5 #{ page }
         blockquote.text-center Read about our costumers and their experiences
-        .row.testimonials 
-            each testimonial in testimonials 
-                .col-md-6.col-lg-4.mb-4 
-                    .card 
-                        .card-body 
-                            blockquote.blockquote 
-                            p.mb-0 
-                                | #{ testimonial.message }
-                            footer.blockquote-footer 
-                                | #{ testimonial.name }
+        include ./layout/testimonialsBlock
         .row 
             .col-md-12
                 h2.d-block.w-100.text-center Add a testimonial
